#cifuzz:build-template:begin
#cc_fuzz_test(
#    name = "{{ .FuzzTestName }}",
#    srcs = [
#        "{{ .FileName }}",
#    ],
#    corpus = glob(
#        ["{{ .FuzzTestName }}_inputs/**"],
#        allow_empty = True,
#    ) + select({
#        "@cifuzz//:collect_coverage": glob([".{{ .FuzzTestName }}_cifuzz_corpus/**"], allow_empty = True),
#        "//conditions:default": [],
#    }),
#    deps = [
#        "@cifuzz",
#        "//:slog_cc",
#    ],
#)
#cifuzz:build-template:end

load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

